--- a/EmployeesApp.Web/Views/Employees/Index.cshtml
+++ b/EmployeesApp.Web/Views/Employees/Index.cshtml
@@ -8,7 +8,7 @@
     @foreach (var employee in Model.EmployeeVMs)
     {
         <li>
-            <a asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id" style="color:@(employee.ShowAsHighlighted ? "red" : "inherit");">@employee.Name</a>
+            <a asp-controller="Employees" asp-action="Details" asp-route-id="@employee.Id">@employee.Name</a>
         </li>
     }
 </ul>
